Fixed small bug, issue was divs were misaligned.

--- a/css/style.css
+++ b/css/style.css
@@ -349,8 +349,6 @@ form.contact-form {
 /* //contact form */
 
 .copy-w3layouts-right p {
-    background: #000000;
-    color: #fff;
 
     letter-spacing: 2px;
 }
